added lorem ipsum

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <hr>
                 <h2 class="tagline">Τεχνική υποστήριξη στο χώρο σας!</h2>
                 <h3><i class="fa fa-phone"></i> 211.117.4868 &nbsp;&nbsp;&nbsp;&nbsp;<i class="fa fa-mobile" aria-hidden="true"></i> &nbsp;6934.351.435</h3>
-                <p class="lead">PC Service Lab στην καρδιά της Αθήνας, στο Κολωνάκι. Σταματήστε να ψάχνετε δεξιά και αριστερά και ελάτε να σας εξυπηρετήσουμε όπως μόνο εμείς ξέρουμε! </p>
+                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt non quod vitae eaque et eos cum magni voluptatem, error aperiam distinctio delectus magnam ratione eligendi quia explicabo consequatur natus molestiae.</p>
                 <div class="list-group">
                   <li class="list-group-item"><i class="fa fa-wifi fa-fw" aria-hidden="true"></i>&nbsp; Εγκατάσταση συνδέσης internet & ασύρματου δικτύου</li>
                   <li class="list-group-item"><i class="fa fa-graduation-cap fa-fw" aria-hidden="true"></i>&nbsp; Εκπαίδευση στη απλή χρήση υπολογιστών</li>
