--- a/index-en.html
+++ b/index-en.html
@@ -22,7 +22,7 @@
                 <img src="images/logo.png" class="navbar-brand">
             </div>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="index-en.html">We Speak English!</a></li>
+                <li><a href="index.html">Ελληνικά</a></li>
             </ul>   
         </div> 
     </nav>
@@ -30,17 +30,17 @@
         <div class="row">
             <div class="col-lg-8">
                 <h1>PC Service Lab</h1>
-                <h2 class="episkeves">Επισκευές Υπολογιστών</h2>
+                <h2 class="episkeves">Athens Computer Repair</h2>
                 <hr>
-                <h2 class="tagline">Τεχνική υποστήριξη στο χώρο σας!</h2>
+                <h2 class="tagline">Leave your computer at home. We'll come to you!</h2>
                 <h3><i class="fa fa-phone"></i> 211.117.4868 &nbsp;&nbsp;&nbsp;&nbsp;<i class="fa fa-mobile" aria-hidden="true"></i> &nbsp;6934.351.435</h3>
-                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt non quod vitae eaque et eos cum magni voluptatem, error aperiam distinctio delectus magnam ratione eligendi quia explicabo consequatur natus molestiae.</p>
+                <p class="lead">We offer affordable computer repair at your Athens location - home or office. Most of the time we can be there on the same day that you call and that includes weekends and evenings.  Don't delay. If your computer is acting up we're just a phone call away!</p>
                 <div class="list-group">
-                  <li class="list-group-item"><i class="fa fa-wifi fa-fw" aria-hidden="true"></i>&nbsp; Εγκατάσταση συνδέσης internet & ασύρματου δικτύου</li>
-                  <li class="list-group-item"><i class="fa fa-graduation-cap fa-fw" aria-hidden="true"></i>&nbsp; Εκπαίδευση στη απλή χρήση υπολογιστών</li>
-                  <li class="list-group-item"><i class="fa fa-search fa-fw" aria-hidden="true"></i>&nbsp; Διάγνοση & αντιμετώπιση ιων</li>
-                  <li class="list-group-item"><i class="fa fa-hdd-o fa-fw" aria-hidden="true"></i>&nbsp; Λήψη αντιγραφόν ασφάλειας (Backup)</li>
-                  <li class="list-group-item"><i class="fa fa-laptop fa-fw" aria-hidden="true"></i>&nbsp; Εγκατάσταση λειτουργικού συστήματος & προγραμμάτον</li>
+                  <li class="list-group-item"><i class="fa fa-wifi fa-fw" aria-hidden="true"></i>&nbsp; Internet/Wi-Fi set up</li>
+                  <li class="list-group-item"><i class="fa fa-graduation-cap fa-fw" aria-hidden="true"></i>&nbsp; Basic computer training</li>
+                  <li class="list-group-item"><i class="fa fa-search fa-fw" aria-hidden="true"></i>&nbsp; Detection and eradication of viruses</li>
+                  <li class="list-group-item"><i class="fa fa-hdd-o fa-fw" aria-hidden="true"></i>&nbsp; System Backups</li>
+                  <li class="list-group-item"><i class="fa fa-laptop fa-fw" aria-hidden="true"></i>&nbsp; Operating system and software installation</li>
                 </div> 
                 <hr>
             </div>
@@ -62,5 +62,6 @@
         </footer>
     </div>
     <!-- /.container -->
+    
 </body>
 </html>
