--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </div>
             <!-- Sidebar -->
             <div class="col-md-4">
-                    <img src="images/technikos.png" class="img-responsive technikos">
+                    <img src="images/technikoslg.png" class="img-responsive technikos">
                 <div class="well">
                     <h4 class="text-center">pcservicelabgr@hotmail.com</h4>
                 </div>
