fixed a few errors

--- a/index-en.html
+++ b/index-en.html
@@ -19,7 +19,7 @@
     <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
-                <img src="images/logo.png" class="navbar-brand">
+                <img src="images/logo.png" class="navbar-brand" alt="company logo">
             </div>
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="index.html">Ελληνικά</a></li>
@@ -36,17 +36,19 @@
                 <h3><i class="fa fa-phone"></i> 211.117.4868 &nbsp;&nbsp;&nbsp;&nbsp;<i class="fa fa-mobile" aria-hidden="true"></i> &nbsp;6934.351.435</h3>
                 <p class="lead">We offer affordable computer repair at your Athens location - home or office. Most of the time we can be there on the same day that you call and that includes weekends and evenings.  Don't delay. If your computer is acting up we're just a phone call away!</p>
                 <div class="list-group">
-                  <li class="list-group-item"><i class="fa fa-wifi fa-fw" aria-hidden="true"></i>&nbsp; Internet/Wi-Fi set up</li>
-                  <li class="list-group-item"><i class="fa fa-graduation-cap fa-fw" aria-hidden="true"></i>&nbsp; Basic computer training</li>
-                  <li class="list-group-item"><i class="fa fa-search fa-fw" aria-hidden="true"></i>&nbsp; Detection and eradication of viruses</li>
-                  <li class="list-group-item"><i class="fa fa-hdd-o fa-fw" aria-hidden="true"></i>&nbsp; System Backups</li>
-                  <li class="list-group-item"><i class="fa fa-laptop fa-fw" aria-hidden="true"></i>&nbsp; Operating system and software installation</li>
+                    <ul>
+                      <li class="list-group-item"><i class="fa fa-wifi fa-fw" aria-hidden="true"></i>&nbsp; Internet/Wi-Fi set up</li>
+                      <li class="list-group-item"><i class="fa fa-graduation-cap fa-fw" aria-hidden="true"></i>&nbsp; Basic computer training</li>
+                      <li class="list-group-item"><i class="fa fa-search fa-fw" aria-hidden="true"></i>&nbsp; Detection and eradication of viruses</li>
+                      <li class="list-group-item"><i class="fa fa-hdd-o fa-fw" aria-hidden="true"></i>&nbsp; System Backups</li>
+                      <li class="list-group-item"><i class="fa fa-laptop fa-fw" aria-hidden="true"></i>&nbsp; Operating system and software installation</li>
+                    </ul>
                 </div> 
                 <hr>
             </div>
             <!-- Sidebar -->
             <div class="col-md-4">
-                    <img src="images/technikoslg.png" class="img-responsive technikos">
+                    <img src="images/technikoslg.png" class="img-responsive technikos" alt="image of a laptop computer and a faceless, cartoon-like figure holding a red wrench">
                 <div class="well">
                     <h4 class="text-center">pcservicelabgr@hotmail.com</h4>
                 </div>
