--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
-                <img src="images/logo.png" class="navbar-brand">
+                <img src="images/logo.png" class="navbar-brand" alt="company logo">
             </div>
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="index-en.html">We Speak English!</a></li>
@@ -36,17 +36,19 @@
                 <h3><i class="fa fa-phone"></i> 211.117.4868 &nbsp;&nbsp;&nbsp;&nbsp;<i class="fa fa-mobile" aria-hidden="true"></i> &nbsp;6934.351.435</h3>
                 <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt non quod vitae eaque et eos cum magni voluptatem, error aperiam distinctio delectus magnam ratione eligendi quia explicabo consequatur natus molestiae.</p>
                 <div class="list-group">
-                  <li class="list-group-item"><i class="fa fa-wifi fa-fw" aria-hidden="true"></i>&nbsp; Εγκατάσταση συνδέσης internet & ασύρματου δικτύου</li>
-                  <li class="list-group-item"><i class="fa fa-graduation-cap fa-fw" aria-hidden="true"></i>&nbsp; Εκπαίδευση στη απλή χρήση υπολογιστών</li>
-                  <li class="list-group-item"><i class="fa fa-search fa-fw" aria-hidden="true"></i>&nbsp; Διάγνοση & αντιμετώπιση ιων</li>
-                  <li class="list-group-item"><i class="fa fa-hdd-o fa-fw" aria-hidden="true"></i>&nbsp; Λήψη αντιγραφόν ασφάλειας (Backup)</li>
-                  <li class="list-group-item"><i class="fa fa-laptop fa-fw" aria-hidden="true"></i>&nbsp; Εγκατάσταση λειτουργικού συστήματος & προγραμμάτον</li>
+                    <ul> 
+                      <li class="list-group-item"><i class="fa fa-wifi fa-fw" aria-hidden="true"></i>&nbsp; Εγκατάσταση συνδέσης internet & ασύρματου δικτύου</li>
+                      <li class="list-group-item"><i class="fa fa-graduation-cap fa-fw" aria-hidden="true"></i>&nbsp; Εκπαίδευση στη απλή χρήση υπολογιστών</li>
+                      <li class="list-group-item"><i class="fa fa-search fa-fw" aria-hidden="true"></i>&nbsp; Διάγνοση & αντιμετώπιση ιων</li>
+                      <li class="list-group-item"><i class="fa fa-hdd-o fa-fw" aria-hidden="true"></i>&nbsp; Λήψη αντιγραφόν ασφάλειας (Backup)</li>
+                      <li class="list-group-item"><i class="fa fa-laptop fa-fw" aria-hidden="true"></i>&nbsp; Εγκατάσταση λειτουργικού συστήματος & προγραμμάτον</li>
+                    </ul>  
                 </div> 
                 <hr>
             </div>
             <!-- Sidebar -->
             <div class="col-md-4">
-                    <img src="images/technikoslg.png" class="img-responsive technikos">
+                    <img src="images/technikoslg.png" class="img-responsive technikos" alt="image of a laptop computer and a faceless, cartoon-like figure holding a red wrench">
                 <div class="well">
                     <h4 class="text-center">pcservicelabgr@hotmail.com</h4>
                 </div>
