--- a/index-en.html
+++ b/index-en.html
@@ -4,7 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
+    <meta name="description" content="Computer repair and software installation at your Athens, Greece home or office. We speak English!">
+    <link rel="author" href="humans.txt" />
+    <link rel="shortcut icon" href="images/favicon.ico"/>
     <title>PC Service Lab: Επισκευές Υπολογιστών</title>
     <!-- Bootstrap CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
