added Greek description

--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
                 <hr>
                 <h2 class="tagline">Τεχνική υποστήριξη στο χώρο σας!</h2>
                 <h3><i class="fa fa-phone"></i> 211.117.4868 &nbsp;&nbsp;&nbsp;&nbsp;<i class="fa fa-mobile" aria-hidden="true"></i> &nbsp;6934.351.435</h3>
-                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt non quod vitae eaque et eos cum magni voluptatem, error aperiam distinctio delectus magnam ratione eligendi quia explicabo consequatur natus molestiae.</p>
+                <p class="lead">Εάν το κομπουιύτερ σας έχει πρόβλημα μπορούμε να σας το φτιάξουμε εκεί που βρίσκεται (περιοχή Αθηνών), ακόμα την ίδια μέρα! Τιμές πάρα πολύ λογικές.</p>
                 <div class="list-group">
                     <ul> 
-                      <li class="list-group-item"><i class="fa fa-wifi fa-fw" aria-hidden="true"></i>&nbsp; Εγκατάσταση συνδέσης internet & ασύρματου δικτύου</li>
+                      <li class="list-group-item"><i class="fa fa-wifi fa-fw" aria-hidden="true"></i>&nbsp; Εγκατάσταση σύνδεσης internet & ασύρματου δικτύου</li>
                       <li class="list-group-item"><i class="fa fa-graduation-cap fa-fw" aria-hidden="true"></i>&nbsp; Εκπαίδευση στη απλή χρήση υπολογιστών</li>
-                      <li class="list-group-item"><i class="fa fa-search fa-fw" aria-hidden="true"></i>&nbsp; Διάγνοση & αντιμετώπιση ιων</li>
-                      <li class="list-group-item"><i class="fa fa-hdd-o fa-fw" aria-hidden="true"></i>&nbsp; Λήψη αντιγραφόν ασφάλειας (Backup)</li>
-                      <li class="list-group-item"><i class="fa fa-laptop fa-fw" aria-hidden="true"></i>&nbsp; Εγκατάσταση λειτουργικού συστήματος & προγραμμάτον</li>
+                      <li class="list-group-item"><i class="fa fa-search fa-fw" aria-hidden="true"></i>&nbsp; Διάγνωση & αντιμετώπιση ιών</li>
+                      <li class="list-group-item"><i class="fa fa-hdd-o fa-fw" aria-hidden="true"></i>&nbsp; Λήψης αντιγράφων ασφαλείας (Backup)</li>
+                      <li class="list-group-item"><i class="fa fa-laptop fa-fw" aria-hidden="true"></i>&nbsp; Εγκατάσταση λειτουργικού συστήματος & προγραμμάτων</li>
                     </ul>  
                 </div> 
                 <hr>
