added corrected text

--- a/index.html
+++ b/index.html
@@ -36,14 +36,16 @@
                 <hr>
                 <h2 class="tagline">Τεχνική υποστήριξη στο χώρο σας!</h2>
                 <h3><i class="fa fa-phone"></i> 211.117.4868 &nbsp;&nbsp;&nbsp;&nbsp;<i class="fa fa-mobile" aria-hidden="true"></i> &nbsp;6934.351.435</h3>
-                <p class="lead">Εάν το κομπουιύτερ σας έχει πρόβλημα μπορούμε να σας το φτιάξουμε εκεί που βρίσκεται (περιοχή Αθηνών), ακόμα την ίδια μέρα! Τιμές πάρα πολύ λογικές.</p>
+                <p class="lead">Εάν ο υπολογιστής σας έχει πρόβλημα, μπορούμε να σας το φτιάξουμε εκεί που βρίσκεται ( Εντός Αττικής ), ακόμα και την ίδια μέρα! Σταματήστε να ψάχνετε δεξιά και αριστερά και επικοινωνήστε μαζί μας να σας εξυπηρετήσουμε όπως μόνο εμείς ξέρουμε. Τιμές πάρα πολύ λογικές!</p>
                 <div class="list-group">
-                    <ul> 
+                    <ul>
+                      <li class="list-group-item"><i class="fa fa-laptop fa-fw" aria-hidden="true"></i>&nbsp; Eπισκευή ολων των ειδών υπολογιστών και TABLET (Windows-Android-Apple)</li> 
                       <li class="list-group-item"><i class="fa fa-wifi fa-fw" aria-hidden="true"></i>&nbsp; Εγκατάσταση σύνδεσης internet & ασύρματου δικτύου</li>
-                      <li class="list-group-item"><i class="fa fa-graduation-cap fa-fw" aria-hidden="true"></i>&nbsp; Εκπαίδευση στη απλή χρήση υπολογιστών</li>
                       <li class="list-group-item"><i class="fa fa-search fa-fw" aria-hidden="true"></i>&nbsp; Διάγνωση & αντιμετώπιση ιών</li>
                       <li class="list-group-item"><i class="fa fa-hdd-o fa-fw" aria-hidden="true"></i>&nbsp; Λήψης αντιγράφων ασφαλείας (Backup)</li>
-                      <li class="list-group-item"><i class="fa fa-laptop fa-fw" aria-hidden="true"></i>&nbsp; Εγκατάσταση λειτουργικού συστήματος & προγραμμάτων</li>
+                      <li class="list-group-item"><i class="fa fa-laptop fa-fw" aria-hidden="true"></i>&nbsp; Εγκατάσταση και επισκευή λειτουργικού συστήματος & προγραμμάτων</li>
+                      <li class="list-group-item"><i class="fa fa-video-camera fa-fw" aria-hidden="true"></i>&nbsp; Εγκατάσταση καμερων ασφαλείας </li>  
+                      <li class="list-group-item"><i class="fa fa-graduation-cap fa-fw" aria-hidden="true"></i>&nbsp; Εκπαίδευση στη απλή χρήση υπολογιστών</li> 
                     </ul>  
                 </div> 
                 <hr>
