--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
+    <meta name="description" content="ΕΠΙΣΚΕΥΕΣ ΥΠΟΛΟΓΙΣΤΩΝ - Τεχνική υποστήριξη στο χώρο σας!">
     <link rel="author" href="humans.txt" />
     <link rel="shortcut icon" href="images/favicon.ico"/>
     <title>PC Service Lab: Επισκευές Υπολογιστών</title>
@@ -21,7 +21,7 @@
     <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
-                <img src="images/logo.png" class="navbar-brand" alt="company logo">
+                <img src="images/logo1.png" class="navbar-brand" alt="company logo">
             </div>
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="index-en.html">We Speak English!</a></li>
@@ -46,6 +46,8 @@
                       <li class="list-group-item"><i class="fa fa-laptop fa-fw" aria-hidden="true"></i>&nbsp; Εγκατάσταση και επισκευή λειτουργικού συστήματος & προγραμμάτων</li>
                       <li class="list-group-item"><i class="fa fa-video-camera fa-fw" aria-hidden="true"></i>&nbsp; Εγκατάσταση καμερων ασφαλείας </li>  
                       <li class="list-group-item"><i class="fa fa-graduation-cap fa-fw" aria-hidden="true"></i>&nbsp; Εκπαίδευση στη απλή χρήση υπολογιστών</li> 
+                      <li class="list-group-item"><i class="fa fa-handshake-o fa-fw" aria-hidden="true"></i>&nbsp; Mοντέρνα websiteς για μικρές επιχειρήσεις. Λογικές τιμές.</li>  
+                    </ul>
                     </ul>  
                 </div> 
                 <hr>
@@ -54,7 +56,7 @@
             <div class="col-md-4">
                     <img src="images/technikoslg.png" class="img-responsive technikos" alt="image of a laptop computer and a faceless, cartoon-like figure holding a red wrench">
                 <div class="well">
-                    <h4 class="text-center">pcservicelabgr@hotmail.com</h4>
+                    <h4 class="text-center">pc-service-lab@hotmail.com</h4>
                 </div>
             </div> 
         </div>
