--- a/index-en.html
+++ b/index-en.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Computer repair and software installation at your Athens, Greece home or office. We speak English!">
+    <meta name="description" content="Computer repair & software installation at your Athens home or office. Halandri, Kifisia, Agia Paraskevi, Holargos.  We speak English!">
     <link rel="author" href="humans.txt" />
     <link rel="shortcut icon" href="images/favicon.ico"/>
     <title>PC Service Lab: Επισκευές Υπολογιστών</title>
@@ -21,7 +21,7 @@
     <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
-                <img src="images/logo.png" class="navbar-brand" alt="company logo">
+                <img src="images/logo2.png" class="navbar-brand" alt="company logo">
             </div>
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="index.html">Ελληνικά</a></li>
@@ -39,11 +39,14 @@
                 <p class="lead">We offer affordable computer repair at your Athens location - home or office. Most of the time we can be there on the same day that you call and that includes weekends and evenings.  Don't delay. If your computer is acting up we're just a phone call away!</p>
                 <div class="list-group">
                     <ul>
+                      <li class="list-group-item"><i class="fa fa-laptop fa-fw" aria-hidden="true"></i>&nbsp; Computer and tablet repair. All types. (Windows-Android-Apple)</li>  
                       <li class="list-group-item"><i class="fa fa-wifi fa-fw" aria-hidden="true"></i>&nbsp; Internet/Wi-Fi set up</li>
                       <li class="list-group-item"><i class="fa fa-graduation-cap fa-fw" aria-hidden="true"></i>&nbsp; Basic computer training</li>
                       <li class="list-group-item"><i class="fa fa-search fa-fw" aria-hidden="true"></i>&nbsp; Detection and eradication of viruses</li>
                       <li class="list-group-item"><i class="fa fa-hdd-o fa-fw" aria-hidden="true"></i>&nbsp; System Backups</li>
                       <li class="list-group-item"><i class="fa fa-laptop fa-fw" aria-hidden="true"></i>&nbsp; Operating system and software installation</li>
+                      <li class="list-group-item"><i class="fa fa-video-camera fa-fw" aria-hidden="true"></i>&nbsp; Security camera installation</li>
+                      <li class="list-group-item"><i class="fa fa-handshake-o fa-fw" aria-hidden="true"></i>&nbsp; Affordable website design and development for small businesses</li>  
                     </ul>
                 </div> 
                 <hr>
@@ -52,7 +55,7 @@
             <div class="col-md-4">
                     <img src="images/technikoslg.png" class="img-responsive technikos" alt="image of a laptop computer and a faceless, cartoon-like figure holding a red wrench">
                 <div class="well">
-                    <h4 class="text-center">pcservicelabgr@hotmail.com</h4>
+                    <h4 class="text-center">pc-service-lab@hotmail.com</h4>
                 </div>
             </div> 
         </div>
