added cogs icon

--- a/index-en.html
+++ b/index-en.html
@@ -44,7 +44,7 @@
                       <li class="list-group-item"><i class="fa fa-graduation-cap fa-fw" aria-hidden="true"></i>&nbsp; Basic computer training</li>
                       <li class="list-group-item"><i class="fa fa-search fa-fw" aria-hidden="true"></i>&nbsp; Detection and eradication of viruses</li>
                       <li class="list-group-item"><i class="fa fa-hdd-o fa-fw" aria-hidden="true"></i>&nbsp; System Backups</li>
-                      <li class="list-group-item"><i class="fa fa-laptop fa-fw" aria-hidden="true"></i>&nbsp; Operating system and software installation</li>
+                      <li class="list-group-item"><i class="fa fa-cogs fa-fw" aria-hidden="true"></i>&nbsp; Operating system and software installation</li>
                       <li class="list-group-item"><i class="fa fa-video-camera fa-fw" aria-hidden="true"></i>&nbsp; Security camera installation</li>
                       <li class="list-group-item"><i class="fa fa-handshake-o fa-fw" aria-hidden="true"></i>&nbsp; Affordable website design and development for small businesses</li>  
                     </ul>
