--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                       <li class="list-group-item"><i class="fa fa-hdd-o fa-fw" aria-hidden="true"></i>&nbsp; Λήψης αντιγράφων ασφαλείας (Backup)</li>
                       <li class="list-group-item"><i class="fa fa-cogs fa-fw" aria-hidden="true"></i>&nbsp; Εγκατάσταση και επισκευή λειτουργικού συστήματος & προγραμμάτων</li>
                       <li class="list-group-item"><i class="fa fa-video-camera fa-fw" aria-hidden="true"></i>&nbsp; Εγκατάσταση καμερων ασφαλείας </li>  
-                      <li class="list-group-item"><i class="fa fa-graduation-cap fa-fw" aria-hidden="true"></i>&nbsp; Εκπαίδευση στη απλή χρήση υπολογιστών</li> 
+                      <li class="list-group-item"><i class="fa fa-graduation-cap fa-fw" aria-hidden="true"></i>&nbsp; Εκπαίδευση στηv απλή χρήση υπολογιστών</li> 
                       <li class="list-group-item"><i class="fa fa-handshake-o fa-fw" aria-hidden="true"></i>&nbsp; Mοντέρνα websites για μικρές επιχειρήσεις. Λογικές τιμές.</li>  
                     </ul>  
                 </div> 
